--- a/package.json
+++ b/package.json
@@ -13,44 +13,37 @@
     "deploy": "npm run build && npm run export"
   },
   "dependencies": {
-    "next": "^14.0.0",
+    "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@supabase/supabase-js": "^2.39.0",
-    "@supabase/auth-helpers-nextjs": "^0.8.7",
-    "@supabase/auth-helpers-react": "^0.4.2",
-    "axios": "^1.6.0",
-    "date-fns": "^2.30.0",
-    "react-hook-form": "^7.48.0",
-    "react-query": "^3.39.3",
-    "@tanstack/react-query": "^5.8.0",
-    "lucide-react": "^0.294.0",
     "clsx": "^2.0.0",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^3.3.6",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
-    "recharts": "^2.8.0",
-    "react-pdf": "^7.5.1",
-    "jspdf": "^2.5.1",
-    "html2canvas": "^1.4.1",
     "react-hot-toast": "^2.4.1",
-    "framer-motion": "^10.16.0",
-    "react-dropzone": "^14.2.3",
-    "xlsx": "^0.18.5"
+    "framer-motion": "^10.16.16",
+    "js-cookie": "^3.0.5",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "sqlite3": "^5.1.6",
+    "sqlite": "^5.1.1"
   },
   "devDependencies": {
-    "@types/node": "^20.9.0",
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
-    "typescript": "^5.2.2",
-    "eslint": "^8.53.0",
-    "eslint-config-next": "^14.0.0",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0",
+    "@types/node": "^20.10.5",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
+    "@types/js-cookie": "^3.0.6",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.5",
+    "typescript": "^5.3.3",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^14.0.4",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
-    "prettier": "^3.0.3",
-    "prettier-plugin-tailwindcss": "^0.5.7"
+    "postcss": "^8.4.32",
+    "prettier": "^3.1.1",
+    "prettier-plugin-tailwindcss": "^0.5.9"
   },
   "keywords": [
     "estagio",
